--- a/style.css
+++ b/style.css
@@ -1,64 +1,91 @@
+/* sets page background color */
+body {
+    background-color: rgb(102, 89, 89);
+}
+
+/* container for page password generator content, centered, height adjusts to fit content, rounded corners */
 .container {
     display: block;
     height: auto;
-    width: auto;
-    background-color: lightgray;
-    margin: 20px;
-    border: 2px solid green;
+    width: 50%;
+    background-color: rgb(92, 86, 129);
+    margin: 20px auto;
+    border: 4px solid rgb(89, 45, 90);
+    border-radius: 25px;
+    overflow: auto;
 }
 
+/* "password generator" centered */
 h1 {
     display: flex;
     justify-content: center;
+    color: rgb(29, 28, 28);
 }
 
+/* "generate a password" centered */
 h2 {
     display: flex;
     justify-content: center;
+    color: rgb(29, 28, 28);
 }
 
+/* container for generated password, centered, height and width adjust with content size */
 .password-container {
-    display: flex;
-    justify-content: center;
+    display: block;
+    margin: auto;
     padding: 10px;
     height: auto;
     width: auto;
 }
 
+/* generated password text box, centered, height and width adjust with content size */
 #password {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    margin: auto;
+    text-align: center;
     position: relative;
     padding: 10px;
     font-size: 18px;
     width: auto;
     height: auto;
-    background-color: white;
+    background-color: rgb(228, 213, 213);
     overflow: auto;
-
+    border-radius: 10px;
 }
 
+/* number input container, centered */
 .pass-length {
     display: flex;
     justify-content: center;
     padding: 5px 5px 10px 5px;
 }
 
-
+/* number input text box, text centered, rounded corners */
 #password-length {
     width: 50%;
     text-align: center;
+    border-radius: 10px;
+    background-color: rgb(245, 235, 235);
 }
 
+/* label above checkboxes, centered, font adjusted */
+#pl-label {
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+}
+
+/* checkboxes container, centered, aligned text left, rounded corners */
 .check-boxes {
     display: block;
     margin: auto;
     width: 40%;
     text-align: left;
-    border: 1px solid green;
+    border: 1px solid rgb(89, 45, 90);
+    border-radius: 10px;
 }
 
+/* checkboxes, flex box aligned left */
 .upper,
 .num,
 .sym {
@@ -66,10 +93,18 @@ h2 {
     justify-content: flex-start;
     padding: 2px;
 }
-
+/* generate password button, centered, rounded corners */
 #pass-btn {
     display: flex;
     justify-content: center;
     margin: 10px auto;
     padding: 5px;
+    border-radius: 10px;
 }
+
+/* container adjust to fit samller screen size */
+@media only screen and (max-width: 600px) {
+    .container {
+        width: auto;
+    }
+  }
